# raspberry-audiobook

./: .gitignore  README.md  pyproject.toml
config/: books.yaml
scripts/: display_test.py  test_rc522.py
src/raspberry_audiobook/: app.py  config.py  main.py  motor.py  nfc.py  player.py  progress.py  seek.py  volume.py
